# fungiclef-2024

./: .gitignore  Makefile  README.md  ViT_explore.ipynb  pipeline-test.py  pyproject.toml  requirements.txt  run_embeddings_wf.py
fungiclef/: bytes_to_embeddings.py  config.json  images-to-parquet.py  predict.py  random_forest_classification.py  transforms.py  utils.py
fungiclef/embedding/: transforms.py
fungiclef/evaluate/: evaluate.py  inference.py  predict.py  scoring.py  submission.py
fungiclef/model/: cosine_classifier.py  dataset.py  embedding_classifier.py  init_models.py  loss.py  train_vit.py  transforms.py  utils.py  vision_transformer.py  vit_model.py  wrapper.py
fungiclef/workflows/: 02-train_test_split.py  benchmark_classification_wf.py  create_dev_set.py  embeddings_tasks.py  embeddings_wf.py  images-to-parquet.py  images_to_parquet.py  images_with_metadata_to_parquet.py  (+2 more)
notebooks/: cc-20240208-dataset-explore.ipynb  cc-20240249-metadata-preprocess.ipynb  cc-20240418-evaluate-model.ipynb  cc-20240419-dataset-preprocess.ipynb  cc-20240423-train-embedding-model-example.ipynb  cc-20240423-train-model-example.ipynb  cc-20240424-production-dataset-split.ipynb  cc-20240428-process-dino-embeddings.ipynb  cc-20240429-model-benchmark.ipynb  mh-20240130-image-transfer.ipynb  mh-20240202-download-dataset.ipynb  mh-20240222-read_parquet.ipynb  mh-20240407-create-dev-set.ipynb
scripts/: download_extract_dataset.sh  download_metadata.sh  install_gcs_connector.sh  install_gcs_connector_for_sudo.sh  train_efficientnet.py  train_embedding.py  train_vit.py
(+9 files in other folders)
